--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ body {
 
 .upper {
     /* border: 2px solid blue; */
-    height: 435px;
+    height: 438px;
 }
 
 .upper::before {
@@ -22,7 +22,7 @@ body {
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 448px;
+    height: 450px;
 }
 
 /* HEADER: LOGO, NAVBAR AND ICONS */
@@ -253,7 +253,7 @@ nav ul li a {
 .lower-part {
     /* border: 2px solid blue; */
     margin: 0px 65px;
-    padding: 90px 94px 0;
+    padding: 95px 94px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -449,11 +449,15 @@ nav ul li a {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    width: 75%;
     margin: 0 auto;
-    padding: 18px;
+    padding: 18px 10px;
     position: absolute;
-    top: 411px;
-    left: 142.85px;
+    top: 412px;
+    /* top: 411px;
+    left: 142.85px; */
+    left: 50%;
+    transform: translate(-50%);
     box-shadow: 0px 0px 10px 0px rgb(17 17 17);
     z-index: 3;
 }
@@ -461,10 +465,10 @@ nav ul li a {
 .mid-container-items {
     /* border: 2px solid green; */
     background-color: #363543;
-    /* width: 100px;
-    height: 22px; */
-    margin: 0 71px;
-    padding: 8px 21px;
+    width: auto;
+    height: 22px;
+    /* margin: 0 21px; */
+    padding: 10px 41px;
     display: flex;
     justify-content: center;
     align-items: center;
